--- a/styles/main.css
+++ b/styles/main.css
@@ -77,6 +77,7 @@ article.main.active {
     box-sizing: border-box;
 }
 .progress {
+    width: 0;
     height: 6px;
     margin-bottom: 20px;
     background-color: red;
