--- a/styles/main.css
+++ b/styles/main.css
@@ -8,7 +8,6 @@ main {
     flex-direction: column;
     justify-content: space-between;
     height: inherit;
-    min-height: -webkit-fill-available;
 }
 .wrapper {
     max-width: 600px;
@@ -207,6 +206,13 @@ fieldset ul li label {
 }
 
 /* mobile */
+@media (orientation: portrait) {
+    body {
+        /*height: calc(100% - 50px);*/
+        min-height: 100vh;
+        min-height: -webkit-fill-available;
+    }
+}
 @media only screen and (orientation: portrait) {
     .questions {
         width: auto;
