--- a/styles/main.css
+++ b/styles/main.css
@@ -289,10 +289,10 @@ h4.done.show {
     padding: 0;
     margin: 0;
 }
-.summary ul li {
+.summary section > ul li {
     padding-bottom: 30px;
 }
-.summary ul li:first-child {
+.summary section > ul li:first-child {
     padding-top: 20px;
 }
 .summary-button {
@@ -305,41 +305,27 @@ h4.done.show {
     margin: 10px 0;
 }
 
-.bg {
-    background-color: black;
-    opacity: 0.7;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    z-index: 0;
-    display: none;
-}
 .information {
-    top: 0;
-    position: absolute;
-    z-index: 1;
+    position: relative;
     width: 100%;
-    padding: 20px;
     box-sizing: border-box;
     display: none;
     margin: 0 auto;
 }
+.information.show {
+    display: block;
+}
 .information > div {
     background-color: white;
     position: relative;
-    max-width: 400px;
-    margin: 0 auto;
 }
 .information ul {
-    margin-top: 60px;
     display: inline-block;
     width: 100%;
 }
 .information li {
     display: flex;
-    border-top: 1px solid lightgray;
+    border-bottom: 1px solid lightgray;
     word-break: break-all;
 }
 .information span:first-child {
@@ -348,16 +334,7 @@ h4.done.show {
 }
 .information span {
     width: 70%;
-    padding: 20px 10px;
-}
-.information-close {
-    position: absolute;
-    right: 0;
-    height: 60px;
-    width: 60px;
-    background: url('../images/close-icon.png') no-repeat;
-    background-size: 20px;
-    background-position: center;
+    padding: 10px;
 }
 
 /* mobile */
